finish companyList and orderList return in JSON
