# go_backend/controller/orderRecords.go
@@ -210,19 +210,25 @@ func (ct *Controller) QueryUpdateOrderStatus(c *gin.Context) {
 	defer db.Close()
 }
 
-//get the order list of a user by donorID and status, double JSON encoded
+// Get order list
+// @Summary Get order details by donor ID while status is not withdraw
+// @Description DonorID and the status exclude as input
+// @Tags order
+// @Accept  json
+// @Produce  json
+// @Param orderInfo body model.GetOrderListByDonorIDInput true "get an order list exclude withdraw status by its donor ID"
+// @Success 200 {array} model.GetOrderListByDonorIDOutput
+// @Failure 500 {object} model.Message
+// @Failure 404 {object} model.Message
+// @Router /order/getOrderListByDonorID/ [post]
 func (ct *Controller) QueryGetOrderListByDonorID(c *gin.Context) {
 	body := c.Request.Body
 	value, err := ioutil.ReadAll(body)
 	if err != nil {
 		fmt.Println(err.Error())
 	}
-	type Input struct {
-		DonorID string `json:"donorID"`
-		Status  string `json:"status"`
-	}
 
-	var input Input
+	var input model.GetOrderListByDonorIDInput
 	er := json.Unmarshal([]byte(value), &input)
 	if er != nil {
 		fmt.Println(err.Error())
@@ -230,14 +236,14 @@ func (ct *Controller) QueryGetOrderListByDonorID(c *gin.Context) {
 	e := reflect.ValueOf(&input).Elem()
 	donorID := fmt.Sprint(e.Field(0).Interface())
 	status := fmt.Sprint(e.Field(1).Interface())
-	// fmt.Println(companyID)
+
 	//connect to DB
 	db, err := connectDB(c)
 	if err != nil {
-		fmt.Println("DB error")
-		c.JSON(500, gin.H{
-			"message": "DB connection problem",
-		})
+		message := model.Message{
+			Message: "DB has something wrong",
+		}
+		c.JSON(500, message)
 		panic(err.Error())
 	}
 	defer db.Close()
@@ -248,25 +254,22 @@ func (ct *Controller) QueryGetOrderListByDonorID(c *gin.Context) {
 		pickUpTime string
 		orderType  string
 	)
-	type Order struct {
-		Note       string `json:"note"`
-		Address    string `json:"address"`
-		PickUpTime string `json:"pickUpTime"`
-		OrderType  string `json:"orderType"`
-	}
-	orderList := []string{}
 
-	rows, err := db.Query("SELECT orderRecord.note, orderRecord.addressID, orderRecord.pickUpTime, orderRecord.orderType FROM orderRecord INNER JOIN orderAssociate ON orderRecord.id = orderAssociate.orderID WHERE orderAssociate.donorID = ? AND orderRecord.status = ?", donorID, status)
+	orderList := []model.GetOrderListByDonorIDOutput{}
+
+	rows, err := db.Query("SELECT orderRecord.note, orderRecord.addressID, orderRecord.pickUpTime, orderRecord.orderType FROM orderRecord INNER JOIN orderAssociate ON orderRecord.id = orderAssociate.orderID WHERE orderAssociate.donorID = ? AND orderRecord.status != ?", donorID, status)
 	if err != nil {
 		if strings.Contains(err.Error(), "Access denied") {
-			c.JSON(500, gin.H{
-				"message": "DB access error, username or password is wrong",
-			})
+			message := model.Message{
+				Message: "DB access error, username or password is wrong",
+			}
+			c.JSON(500, message)
 			panic(err.Error())
 		}
-		c.JSON(500, gin.H{
-			"message": "Query statements has something wrong",
-		})
+		message := model.Message{
+			Message: "Query statement has something wrong",
+		}
+		c.JSON(500, message)
 		panic(err.Error())
 	} else {
 		for rows.Next() {
@@ -274,28 +277,28 @@ func (ct *Controller) QueryGetOrderListByDonorID(c *gin.Context) {
 			if err != nil {
 				log.Fatal(err)
 			}
-			orderRecord := &Order{
+			orderRecord := model.GetOrderListByDonorIDOutput{
 				Note:       note,
 				Address:    addressID,
 				PickUpTime: pickUpTime,
 				OrderType:  orderType,
 			}
 			// fmt.Println(orderRecord)
-			orderInJSON, err := json.Marshal(orderRecord)
-			if err != nil {
-				log.Fatal("Cannot encode to JSON ", err)
-			}
-			fmt.Println(string(orderInJSON))
-			orderList = append(orderList, string(orderInJSON))
+			// orderInJSON, err := json.Marshal(orderRecord)
+			// if err != nil {
+			// 	log.Fatal("Cannot encode to JSON ", err)
+			// }
+			// fmt.Println(string(orderInJSON))
+			orderList = append(orderList, orderRecord)
 			fmt.Println(orderList)
 		}
 	}
-	listInJSON, err := json.Marshal(orderList)
-	if err != nil {
-		log.Fatal("Cannot encode to JSON ", err)
-	}
+	// listInJSON, err := json.Marshal(orderList)
+	// if err != nil {
+	// 	log.Fatal("Cannot encode to JSON ", err)
+	// }
 
-	c.String(200, string(listInJSON))
+	c.JSON(200, orderList)
 	defer rows.Close()
 }
 
@@ -372,7 +375,7 @@ func (ct *Controller) QueryUpdateItemTemperature(c *gin.Context) {
 // @Success 201 {object} model.Message
 // @Failure 500 {object} model.Message
 // @Failure 404 {object} model.Message
-// @Router /order/updateOrderAssociate/ [post]
+// @Router /order/addOrderAssociate/ [post]
 func (ct *Controller) QueryAddOrderAssociate(c *gin.Context) {
 	//getting data from request
 	body := c.Request.Body
